--- a/projects/src/inclined-plane-application-VR.html
+++ b/projects/src/inclined-plane-application-VR.html
@@ -366,9 +366,7 @@
             </a-entity>
         </a-entity>
 
-        <a-entity
-            vr-interface="dimension: 3 2; theta: 135; position: -0.7 0 0.7; transparency: true; gap: 0.01 0.01; border: 1 #6d7584;"
-            app>
+        <a-entity vr-interface="dimension: 3 2; theta: 135; transparency: true; gap: 0.01 0.01; border: 1 #6d7584;" app>
         </a-entity>
 
     </a-scene>
