--- a/projects/src/platonic-solids-application-VR.html
+++ b/projects/src/platonic-solids-application-VR.html
@@ -130,9 +130,9 @@
                         self.models[self.modelIndex].object3D.children[0].material.emissive.set('#000');
                         this.wireframeColor = '#000';
                     } else {
-                        self.models[self.modelIndex].object3D.children[0].material.wireframe = true;                        
+                        self.models[self.modelIndex].object3D.children[0].material.wireframe = true;
                         self.models[self.modelIndex].object3D.children[0].material.emissive.set('#ffffff');
-                        this.wireframeColor= '#ffffff';
+                        this.wireframeColor = '#ffffff';
                     }
                     this.wireframe = self.models[self.modelIndex].object3D.children[0].material.wireframe;
                     vrInterface.showMessage(`Wireframe is ${self.models[self.modelIndex].object3D.children[0].material.wireframe ? 'on' : 'off'}`);
@@ -180,8 +180,9 @@
         <a-entity light="type:directional" position="25 30 20"></a-entity>
         <a-entity light="color: #fff; castShadow:true;" position="25 30 20"></a-entity>
 
-        <a-entity id="tetrahedron" name="Tetrahedron" class="menu-model" geometry="primitive: tetrahedron; radius: 1; detail: 0"
-            material="color:#ff0000" position="0 1 -3" shadow="receive: true" visible="true">
+        <a-entity id="tetrahedron" name="Tetrahedron" class="menu-model"
+            geometry="primitive: tetrahedron; radius: 1; detail: 0" material="color:#ff0000" position="0 1 -3"
+            shadow="receive: true" visible="true">
         </a-entity>
         <a-entity id="box" name="Cube" class="menu-model" geometry="primitive: box; width: 1; height: 1; depth: 1"
             position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
@@ -205,7 +206,7 @@
         </a-entity>
 
         <a-entity
-            vr-interface="dimension: 3 2; rotation: 90; position: -1 0 0; transparency: true; gap: 0.01 0.01; border: 1 #6d7584; messageBG: #121212"
+            vr-interface="dimension: 3 2; transparency: true; gap: 0.01 0.01; border: 1 #6d7584; messageBG: #121212"
             config button-controls></a-entity>
 
     </a-scene>
