fixed missing </div>

--- a/index.html
+++ b/index.html
@@ -246,28 +246,29 @@
 
             <!-- End page content -->
         </div>
+    </div>
 
 
-        <!-- Footer -->
-        <footer class="w3-center w3-black w3-padding-16">
-            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-                    class="w3-hover-text-green">w3.css</a></p>
-        </footer>
+    <!-- Footer -->
+    <footer class="w3-center w3-black w3-padding-16">
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
+                class="w3-hover-text-green">w3.css</a></p>
+    </footer>
 
-        <script>
-            function submitForm() {
-                document.getElementById("gform").submit()
-            }
+    <script>
+        function submitForm() {
+            document.getElementById("gform").submit()
+        }
 
-            function resetForm() {
-                document.getElementById("gform").reset()
+        function resetForm() {
+            document.getElementById("gform").reset()
 
-            }
+        }
 
-            function showModal() {
-                document.getElementById("modal").style.display = "block"
-            }
-        </script>
+        function showModal() {
+            document.getElementById("modal").style.display = "block"
+        }
+    </script>
 
 </body>
 
