travel-the-world added

--- a/projects/src/travel-the-world-application.html
+++ b/projects/src/travel-the-world-application.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Travel the world</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Fullscreen Landscape on iOS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Travel the world</title>
     <script src="../libs/aframe.min1.js"></script>
 
     <script src="travel-the-world.js"></script>
