project meet the world adjusted

--- a/projects/src/platonic-solids-application-VR.html
+++ b/projects/src/platonic-solids-application-VR.html
@@ -200,6 +200,10 @@
                         self.models[self.modelIndex].object3D.children[0].visible = false;
                         self.models[self.modelIndex].object3D.children[1].visible = true;
                         this.wireframe = true;
+
+                        self.models[self.modelIndex].object3D.children[0].material.wireframe = true;
+                        self.models[self.modelIndex].object3D.children[0].material.emissive.set('#ffffff');
+                        this.wireframeColor = '#ffffff';
                     }
                     vrInterface.showMessage(`Wireframe is ${self.models[self.modelIndex].object3D.children[0].material.wireframe ? 'on' : 'off'}`);
                 });
