--- a/projects/src/travel-the-world-application.html
+++ b/projects/src/travel-the-world-application.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Meet the World </title>
+    <title>Travel the World </title>
     <meta name="description" content="360&deg; Image - A-Frame">
     <script src="../libs/aframe-master.js"></script>
     <script src="../libs/vr-interface.js"></script>
