travel project name changed and size os the text adjusted

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/travel-the-world.html">
+                <a href="projects/virtual-travel.html">
                     <div class="w3-display-container" style="border:2px solid black">
-                        <div class="project-title w3-display-topleft w3-padding">Travel the World</div>
+                        <div class="project-title w3-display-topleft w3-padding">Virtual Travel</div>
                         <img src="img/vascular-diseases/place.png" alt="example of place"
                              style="width:100%;">
                     </div>
