--- a/projects/src/virtual-travel-application.html
+++ b/projects/src/virtual-travel-application.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Travel the World </title>
+    <title>Virtual Travel</title>
     <meta name="description" content="360&deg; Image - A-Frame">
     <script src="../libs/aframe-master.js"></script>
     <script src="../libs/vr-interface.js"></script>
@@ -79,7 +79,7 @@
                     skyEl.setAttribute('src', '#st-pter');
                     string = '\nPLACE: Saint Petersburg, Northwestern, Russia.\n';
                     string += '\nSaint Petersburg is situated on the Neva River,\n at the head of the Gulf of Finland on the Baltic \nSea, with a population of roughly 5.4 million \nresidents.';
-                    string += 'Saint Petersburg is known as the \n"Cultural Capital of Russia", and received over 15 \nmillion tourists in 2018, and is considered an \nimportant economic, scientific, cultural, and \ntourism centre of Russia and Europe. \n\n';
+                    string += 'Saint Petersburg is known as the \n"Cultural Capital of Russia", and received over \n15 million tourists in 2018, and is considered \nan important economic, scientific, cultural, and \ntourism centre of Russia and Europe. \n\n';
                     vrInterface.showSideText(string);
                 });
 
@@ -140,7 +140,7 @@
                  config button-controls>
         </a-entity>
 
-        <a-entity vr-interface="dimension: 4 2; orbits: 1 1.5 2; theta: 90; rho: 0 ; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584; messageColor: yellow; messageSize: 1.2; sideTextSize: 0.8 1.3; sideTextRotation: -40"
+        <a-entity vr-interface="dimension: 4 2; orbits: 1 1.5 2; theta: 90; rho: 0 ; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584; messageColor: yellow; messageSize: 1.2; sideTextSize: 0.88 1.3; sideTextRotation: -40"
                    config button-controls>
         </a-entity>
 
