--- a/projects/virtual-travel.html
+++ b/projects/virtual-travel.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Travel the World</title>
+    <title>Virtual Travel</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/w3.css">
@@ -29,13 +29,13 @@
     <div class="w3-content w3-padding " style="max-width:1564px ">
 
         <div class="w3-container w3-padding-32 " id="projects">
-            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Travel the World</h1>
+            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Virtual Travel</h1>
         </div>
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p>
 
-                "Travel the world" is a project that aims to provide a trip around the world without you having to leave your home. With a Virtual Reality mode, you can view several incredible places around the world and still find out some curiosities about each one.
+                "Virtual Travel" is a project that aims to provide a trip around the world without you having to leave your home. With a Virtual Reality mode, you can view several incredible places around the world and still find out some curiosities about each one.
             </p>
         </div>
 
@@ -44,7 +44,7 @@
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
-            <iframe id="scene" class="w3-col l8" src="src/travel-the-world-application.html" height="530"
+            <iframe id="scene" class="w3-col l8" src="src/virtual-travel-application.html" height="530"
                     style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
@@ -67,7 +67,7 @@
         <div class="w3-row-padding">
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/travel-the-world-application.html" target="_" style="text-decoration: none;">
+                <a href="./src/virtual-travel-application.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                          style="background: url('img/Know-the-world/vr-background.png') center;">
                         <div class="w3-padding" style="width:100%">
