Added Historical Figures page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <a href="projects/platonic-solids.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Platonic Solids</div>
-                        <img src="img/platonic-solids/platonic-solids.jpeg" alt="Platonic Solids logo"
+                        <img src="img/projects-main-images/platonic-solids.jpeg" alt="Platonic Solids logo"
                              style="width:100%;">
                     </div>
                 </a>
@@ -101,7 +101,7 @@
                 <a href="projects/solar-system.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Solar System</div>
-                        <img src="img/solar-system/solar-system.png" alt="Solar System logo" style="width:100%;">
+                        <img src="img/projects-main-images/solar-system.png" alt="Solar System logo" style="width:100%;">
                     </div>
                 </a>
             </div>
@@ -109,7 +109,7 @@
                 <a href="projects/architecture.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Architecture</div>
-                        <img src="img/architecture/architecture.jpg" alt="House" style="width:100%;">
+                        <img src="img/projects-main-images/architecture.jpg" alt="House" style="width:100%;">
                     </div>
                 </a>
             </div>
@@ -117,7 +117,7 @@
                 <a href="projects/projectile-motion.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Projectile Motion</div>
-                        <img src="img/projectile-motion/projectile-motion.jpg" alt="aiplane droping crate"
+                        <img src="img/projects-main-images/projectile-motion.jpg" alt="aiplane droping crate"
                              style="width:100%;">
                     </div>
                 </a>
@@ -127,7 +127,7 @@
                 <a href="projects/inclined-plane.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Inclined Plane</div>
-                        <img src="img/inclined-plane/inclined-plane.png" alt="box sliding on a inclined plane"
+                        <img src="img/projects-main-images/inclined-plane.png" alt="box sliding on a inclined plane"
                              style="width:100%;">
                     </div>
                 </a>
@@ -137,7 +137,7 @@
                 <a href="projects/vascular-diseases.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Vascular Diseases</div>
-                        <img src="img/vascular-diseases/vascular-diseases.png" alt="example of stroke"
+                        <img src="img/projects-main-images/vascular-diseases.png" alt="example of stroke"
                              style="width:100%;">
                     </div>
                 </a>
@@ -147,7 +147,17 @@
                 <a href="projects/virtual-travel.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Virtual Travel</div>
-                        <img src="img/vascular-diseases/place.png" alt="example of place"
+                        <img src="img/projects-main-images/virtual-travel.png" alt="example of place"
+                             style="width:100%;">
+                    </div>
+                </a>
+            </div>
+            
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <a href="projects/historical-figures.html">
+                    <div class="w3-display-container" style="border:2px solid black">
+                        <div class="project-title w3-display-topleft w3-padding">Historical Figures</div>
+                        <img src="img/projects-main-images/historical-figures.png" alt="example of important historical figures"
                              style="width:100%;">
                     </div>
                 </a>
