--- a/projects/historical-figures.html
+++ b/projects/historical-figures.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Solar System</title>
+    <title>Historical Figures</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/w3.css">
@@ -29,21 +29,12 @@
     <div class="w3-content w3-padding " style="max-width:1564px ">
 
         <div class="w3-container w3-padding-32 " id="projects">
-            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Solar System</h1>
+            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Historical Figures</h1>
         </div>
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p>
-                The Solar System was formed 4.6 billion years ago. The vast majority of the system's mass is
-                in the Sun, with most of the remaining mass contained in Jupiter. It presents 8 planets around
-                the sun, being Mercury, Venus, Earth, Mars with a solid surface and Jupiter, Saturn, Uranus,
-                Neptune in the gaseous state and Pluto as a dwarf planet.
-            </p>
-
-            <p>
-                The solar system has other interesting points, like a moon around the earth in which it has
-                a strong influence on the tides and waves in the oceans. On Saturn, you can see a cloud made
-                up of rocks and ring-shaped particles that orbit the planet.
+                Its important to study history and knows what happenned on the past. There are many people that marked the society,  for evil with wars, battles and conflicts or contribute to progress fo the science or the organization aspect of society. So on the next application has a book of historical figures and do you have to fill the book with the picture that corresponds the information text present on the pages.
             </p>
 
         </div>
@@ -54,7 +45,7 @@
                 <p></p>
             </div>
 
-            <iframe id="scene" class="w3-col l8" src="./src/solar-system-application.html" height="400"
+            <iframe id="scene" class="w3-col l8" src="./src/historical-figures-application.html" height="400"
                 style="border:2px solid black;"></iframe>
 
             <script>
@@ -79,34 +70,17 @@
 
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/solar-system-application.html?quality=0" target="_blank" style="text-decoration: none;">
+                <a href="./src/historical-figures-application.html" target="_blank" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Solar-System/blur.jpg') center;">
+                        style="background: url('img/Historical-Figures/blur.png') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                            <br />Fullscreen - Medium Quality
+                            <br />Fullscreen
                         </div>
                     </div>
                 </a>
             </div>
-
-            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/solar-system-application.html?quality=1" target="_blank" style="text-decoration: none;">
-                    <div class="more-modes w3-display-container"
-                        style="background: url('img/Solar-System/blur.jpg') center;">
-                        <div class="w3-padding" style="width:100%">
-                            <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                            <br />Fullscreen - High Quality
-                        </div>
-                    </div>
-                </a>
-
-                <p class="more-modes-text">
-                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    In high quality, the download time can be considerably longer.
-                </p>
-            </div>
-
+            <!--
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/solar-system-application-AR.html" target="_blank" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
@@ -143,14 +117,14 @@
                     required).
                 </p>
             </div>
-
+            -->
         </div>
         <!-- End of more modes-->
 
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Images in Augmented Reality</h3>
         </div>
-
+        <!-- 
         <div class="w3-content w3-display-container w3-center w3-row ">
             <img class="slide" src="./img/Solar-System/screenshot1-AR.jpeg" style="border:1px solid black"
                 onclick="openModal(1)">
@@ -184,19 +158,15 @@
                 class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
                 onclick="closeModal(0)" style="cursor:pointer">×</span>
         </div>
+        -->
 
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Images in Virtual Reality</h3>
         </div>
-
+        <!--
         <div class="w3-content w3-display-container w3-center w3-row">
             <img class="slide2" src="./img/Solar-System/screenshot5-VR.png"
                 style="width: 90%; height: auto; border:1px solid black" onclick="openModal2(1)">
-            <!--
-            <img class="slide2" src="./img/Solar-System/screenshot6-VR.jpeg" style="border:1px solid black" onclick="openModal2(2)">
-            <img class="slide2" src="./img/Solar-System/screenshot7-VR.jpeg" style="border:1px solid black" onclick="openModal2(3)">
-            <img class="slide2" src="./img/Solar-System/screenshot8-VR.jpeg" style="border:1px solid black" onclick="openModal2(4)">
-            -->
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
                 onclick="plusDivs2(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs2(1) ">&#10095;</button>
@@ -206,11 +176,6 @@
             <div class="w3-content w3-center" style="height: 80%;">
                 <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot5-VR.png"
                     style="height: 100%; border:1px solid black">
-                <!--
-                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot6-VR.jpeg" style="height: 100%; border:1px solid black">
-                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot7-VR.jpeg" style="height: 100%; border:1px solid black">
-                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot8-VR.jpeg" style="height: 100%; border:1px solid black">
-                -->
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal2(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal2(1)">❯</span>
             </div>
@@ -219,15 +184,13 @@
                 class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
                 onclick="closeModal2()" style="cursor:pointer">×</span>
         </div>
+        -->
 
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
-            <p><i>Alpha-Element, "Saturn-Ring texture", Web resource:
-                    https://www.deviantart.com/alpha-element/art/Stock-Image-Saturn-Rings-393767006 </i></p>
-            <p><i>Solar System Scope, "Solar System textures", Web resource:
-                    https://www.solarsystemscope.com/textures/</i></p>
-            <p><i>Owen, T.C. "Solar System." From Encyclopædia Britannica, inc. Web resource
-                    https://www.britannica.com/science/solar-system</i></p>
+            <p><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque repellat sequi temporibus nam reiciendis totam at ipsa voluptatem. Eum quia provident earum sed architecto quasi ducimus impedit perferendis minus dolore!</i></p>
+            <p><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sed fugiat dolor ab. Officia architecto autem illo odit at nobis vero voluptas dignissimos est blanditiis, amet eligendi quae? Velit, hic?</i></p>
+            <p><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex consequatur aliquid, vitae sapiente ad nulla inventore dolore quibusdam rem temporibus ab nostrum quia, dolores perferendis sunt? Eveniet corrupti accusantium odio.</i></p>
         </div>
 
         <!-- End page content -->
